--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
-    <title>Conversor de moedas</title>
+     <title>Conversor de moedas</title>
 </head>
 <body>
+
     <img class="logo" src="./assets/logo.gif" alt="logo-conversor-de-moedas">
 
     <main>
@@ -22,36 +23,36 @@
 
         <label>
             Converter <b>para</b>
-            <select>
-                <option>US$ Dólar Americano</option>
-                <option>€ Euro</option>
+            <select class="currency-select">
+                <option value="dolar">US$ Dólar Americano</option>
+                <option value="euro">€ Euro</option>
             </select>
         </label>
 
         <label>
-            valor <input placeholder="R$10.000,00">
+            valor <input class="input-currency" placeholder="R$10.000,00">
         </label>
 
-        <button>Converter</button>
+        <button class="convert-button">Converter</button>
 
         <section>
             <div class="currency-box">
                 <img src="assets/real.png" alt="logo-moeda-converter">
                 <p class="currency">Real</p>
-                <p class="currency-value">R$0,00</p>
+                <p class="currency-value-to-convert">R$0,00</p>
             </div>
 
             <img class="arrow-img" src="assets/seta.png" alt="seta">
 
             <div class="currency-box">
-                <img src="assets/dolar.png" alt="logo-moeda-convertida">
-                <p class="currency">Dolar</p>
+                <img class="currency-img" src="assets/dolar.png" alt="logo-moeda-convertida">
+                <p class="currency" id="currency-name">Dolar</p>
                 <p class="currency-value">US$0.0</p>
             </div>
         </section>
     </main>
-
-
-    
 </body>
+
+<script src="./scripts.js"></script>
+
 </html>
